Fixed bug on sample shift,  corrected video position

--- a/src/components/VideoCapture/VideoCapture.css
+++ b/src/components/VideoCapture/VideoCapture.css
@@ -3,7 +3,7 @@
 }
 
 .VideoCapture {
-    clip-path: circle(151px at 320px 243px);
+    clip-path: circle(27% at 50% 50.5%);
     filter: blur(7px);
 }
 
